src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #001233 !important;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.top-bar {
  background-color: #ff595a;
}

.max-size-img {           /*dims: 408 by 456px*/
  min-width: 204px;
  max-width: 408px;

  object-fit: contain;
}

#social {
  margin-left: 1rem;
}

.responsive-text {
  font-size: 1.8rem;      /* Initial font size */
  margin-left: 8rem;
}

.bio {
  display: block;
  text-align: left;
  margin-right: 1.5rem;
}

@media (max-width: 990px) {
  .responsive-text {
    font-size: 1.5rem;    /* Font size for smaller screens */
    margin-left: 5rem;
  }
}

@media (max-width: 768px) {
  .responsive-text {
    font-size: .9rem;     /* Font size for even smaller screens */
    margin-left: 3rem;
  }
}

